# advent2024

./: .gitignore  README.md  advent2024.cabal
cmd/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
cmd/advent2024/: Main.hs
src/Advent/: Math.hs  NonEmpty.hs  Parse.hs
src/Advent/Problems/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Main.hs
