cabal-version: 3.4
name:          advent2024
version:       0.1.0.0

common options
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    ExplicitNamespaces
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints -Wunused-packages

common base
  build-depends: base ==4.17.2.1

common relude
  build-depends: relude ==1.2.2.0

common grid
  build-depends: grid ==7.8.15

library
  import:          options, base, relude
  build-depends:
    , megaparsec          ==9.7.0
    , parser-combinators  ==1.3.0

  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Advent.NonEmpty
    Advent.Parse

common day
  import:         options, relude
  ghc-options:    -threaded
  build-depends:  advent2024
  hs-source-dirs: cmd/

executable day1
  import:  day
  main-is: Day1.hs

executable day2
  import:  day
  main-is: Day2.hs

executable day3
  import:  day
  main-is: Day3.hs

executable day4
  import:  day, grid
  main-is: Day4.hs

executable day5
  import:  day
  main-is: Day5.hs

executable day6
  import:  day, grid
  main-is: Day6.hs

executable day7
  import:  day
  main-is: Day7.hs
