cabal-version: 3.4
name:          advent2024
version:       0.1.0.0

common options
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    ExplicitNamespaces
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints -Wunused-packages

common base
  build-depends: base ==4.17.2.1

common relude
  build-depends: relude ==1.2.2.0

library
  import:          options, base, relude
  build-depends:
    , algebraic-graphs    ==0.7
    , containers          ==0.6.7
    , grid                ==7.8.15
    , megaparsec          ==9.7.0
    , parser-combinators  ==1.3.0

  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Advent.Math
    Advent.NonEmpty
    Advent.Parse
    Advent.Problems.Day1
    Advent.Problems.Day10
    Advent.Problems.Day11
    Advent.Problems.Day2
    Advent.Problems.Day3
    Advent.Problems.Day4
    Advent.Problems.Day5
    Advent.Problems.Day6
    Advent.Problems.Day7
    Advent.Problems.Day8
    Advent.Problems.Day9

executable advent2024
  import:         options, relude
  ghc-options:    -threaded
  build-depends:
    , advent2024
    , optparse-applicative  ==0.18.1.0
    , time                  ==1.12.2

  hs-source-dirs: cmd/advent2024
  main-is:        Main.hs

test-suite examples
  import:         options, relude
  type:           exitcode-stdio-1.0
  build-depends:
    , advent2024
    , hspec       ==2.11.10

  hs-source-dirs: test
  main-is:        Main.hs
